--- a/obsidian/.config/obsidian-vault-config/plugins/templater-obsidian/styles.css
+++ b/obsidian/.config/obsidian-vault-config/plugins/templater-obsidian/styles.css
@@ -54,8 +54,7 @@
     justify-content: center;
 }
 
-.templater-prompt-div,
-.templater-multisuggester-div {
+.templater-prompt-div {
     display: flex;
 }
 
@@ -64,8 +63,7 @@
     flex-grow: 1;
 }
 
-.templater-prompt-input,
-.templater-multisuggester-input {
+.templater-prompt-input {
     flex-grow: 1;
 }
 
@@ -82,10 +80,6 @@ textarea.templater-prompt-input {
 
 textarea.templater-prompt-input:focus {
     border-color: var(--interactive-accent);
-}
-
-.templater-multisuggester-list {
-    margin: 1.5em 0;
 }
 
 .cm-s-obsidian .templater-command-bg {
